# seo

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PROMPT.md  PROMPT.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a3c5e7b9d02_add_chat_conversations.py  6f67765adf8f_initial_schema_with_timestamptz.py  a12b3c4d5e6f_add_priority_scores.py  a1b2c3d4e5f6_add_run_id_to_analysis_events.py  a4d7b2e1c903_daily_metrics_safe_index_rebuild.py  a7b3f2e1d5c6_extend_task_and_page.py  a9f0c3b1d2e4_add_lateral_queries.py  b1c2d3e4f5a6_add_plain_ru_to_recommendations.py  b2c3d4e5f6a7_search_queries_funnel_relevance.py  b3c7e4d1f520_unify_timestamps_and_activity_partial_idx.py  b7d8e9f0c1a2_add_weekly_reports.py  bc745533ed8a_agent_run_timestamptz.py  c2d4e6f8a0b1_add_source_finding_id_to_recommendations.py  c3d4e5f6a7b8_add_advice_card_states.py  c4d5e6f7a8b9_add_target_demand_map.py  c4d8e9f1a2b3_add_query_relevance.py  c8a1e4f9d702_add_page_fingerprints.py  d4e5f6a7b8c9_add_advice_verification.py  d5e6f7a8b9c0_add_harmful_diagnosis.py  d9e0f1a2b3c4_add_target_config_draft.py  d9f2b4c8e501_add_intent_tables.py  e1a2b3c4d5f6_onboarding_schema.py  e1f2a3b4c5d6_query_serp_snapshots.py  e7f8a9b0c1d2_add_page_yandex_index_status.py  e8f9c1a2b4d6_add_page_deep_extracts.py  f3b2a0e4c819_add_site_profile_columns.py  f5c9a2d1e837_add_page_reviews.py  f7e8a9b0c1d2_add_activity_and_outcomes.py  f9a1b2c3d4e5_fix_daily_metrics_null_dimension_unique.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: base.py  llm_client.py  openai_fallback.py  query_clustering.py  query_recommendations.py  schemas.py  search_visibility.py  seasonality_engine.py  task_generator.py  tasks.py  technical_indexing.py  validator.py
backend/app/collectors/: backfill_funnel_relevance.py  base.py  deep_crawler.py  deep_extract_tasks.py  indexnow.py  metrica.py  robots_fetcher.py  site_crawler.py  tasks.py  webmaster.py  wordstat.py  yandex_serp.py
backend/app/core_audit/: __init__.py  activity.py  classifier.py  decision_tree.py  harmful_diagnoser.py  intent_codes.py  missing_landings.py  page_classifier.py  profile_protocol.py  query_coverage.py  registry.py  relevance.py  relevance_llm.py  safety_layer.py  standalone_test.py  strategic_focus.py
backend/scripts/: check_api_response.py  integration_test.py  yandex_api_audit.py
backend/tests/: conftest.py  test_activity_log.py  test_stage_events.py  test_task_messages.py
(+486 files in other folders)
