[project]
name = "yandex-growth-tower"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",  # sync driver for Alembic migrations (no build-essential needed)
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "cryptography>=44.0.0",
    "python-telegram-bot>=21.0",
    "python-multipart>=0.0.18",
    # Fingerprinting (Module 1)
    "datasketch>=1.6.5",
    "trafilatura>=1.12.2",
    "pymorphy3>=2.0.2",
    "pymorphy3-dicts-ru>=2.4.417150",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
# Tests hit the real dev Postgres (fixtures roll back every transaction,
# so DB stays clean). Canonical run:
#   docker compose exec backend pytest tests -q
# Local (requires matching Python 3.12 + SQLAlchemy 2 env):
#   DATABASE_URL=postgresql+asyncpg://tower:devpassword@localhost/growthtower \
#     pytest tests -q
